# happytube

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
config/base/: app.yaml  prompts.yaml  youtube.yaml
docs/: modernization-plan.md
happytube/: claude.py  ip.py  iploader.py  main.py  mb.py  mq.py  prompts.py  tmq.py  utils.py  videos.py  yt.py  yt_api_pipeline.py
happytube/cli/: __init__.py  commands.py
happytube/config/: __init__.py  config_manager.py  settings.py
happytube/models/: __init__.py  markdown.py  video.py
happytube/stages/: __init__.py  assess.py  base.py  enhance.py  fetch.py  report.py
happytube/utils/: __init__.py  logging.py
happytube/web/: DEPLOYMENT.md  README.md  __init__.py  export.py  server.py
happytube/web/static/: index.html  player.js  styles.css
happytube/web/templates/: player.html
plans/: phase-1-core-infrastructure.md  phase-2-stage-implementation.md  phase-3-cli-commands.md  phase-4-analytics-reporting.md  phase-5-automation-polish.md
scripts/: daily_run.sh  deploy_web.sh  ip.sh
templates/: daily_report.html
tests/: test_pipeline.py  utils_test.py
